--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <!--Lodash-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js" integrity="sha512-90vH1Z83AJY9DmlWa8WkjkV79yfS2n2Oxhsi2dZbIv0nC4E6m5AbH8Nh156kkM7JePmqD6tcZsfad1ueoaovww==" crossorigin="anonymous"></script>
   
+    <script defer src="/js/youtube.js"></script>
     <script defer src="/js/main.js"></script>
-
 </head>
 <body>
     <!-- header -->
@@ -389,28 +389,70 @@
     </header>
 
     
-  <!--VISUAL-->
-  <section class="visual">
-    <div class="inner">
+    <!--VISUAL-->
+    <section class="visual">
+      <div class="inner">
 
-      <div class="title fade-in">
-        <img src="./images/visual_title.png" alt="STARBUCKS DELIGHTFUL START TO THE YEARS" />
-        <a href="javascript:void(0)" class="btn btn--brown">자세히 보기</a>
-      </div>
-      <div class="fade-in">
-        <img src="./images/visual_cup1.png" alt="new OATMEAL LATTE" class="cup1 image" />
-        <img src="./images/visual_cup1_text.png" alt="오트밀 라떼" class="cup1 text" />
-      </div>
-      <div class="fade-in">
-        <img src="./images/visual_cup2.png" alt="new STARBUCKS CARAMEL CRUMBLE MOCHA" class="cup2 image" />
-        <img src="./images/visual_cup2_text.png" alt="스타벅스 카라멜 크럼블 모카" class="cup2 text" />
-      </div>
-      <div class="fade-in">
-        <img src="./images/visual_spoon.png" alt="Spoon" class="spoon" />
-      </div>
+        <div class="title fade-in">
+          <img src="./images/visual_title.png" alt="STARBUCKS DELIGHTFUL START TO THE YEARS" />
+          <a href="javascript:void(0)" class="btn btn--brown">자세히 보기</a>
+        </div>
+        <div class="fade-in">
+          <img src="./images/visual_cup1.png" alt="new OATMEAL LATTE" class="cup1 image" />
+          <img src="./images/visual_cup1_text.png" alt="오트밀 라떼" class="cup1 text" />
+        </div>
+        <div class="fade-in">
+          <img src="./images/visual_cup2.png" alt="new STARBUCKS CARAMEL CRUMBLE MOCHA" class="cup2 image" />
+          <img src="./images/visual_cup2_text.png" alt="스타벅스 카라멜 크럼블 모카" class="cup2 text" />
+        </div>
+        <div class="fade-in">
+          <img src="./images/visual_spoon.png" alt="Spoon" class="spoon" />
+        </div>
 
+      </div>
+    </section>
+      <!--NOTICE-->
+  <section class="notice">
+
+    <!--NOTICE LINE-->
+    <div class="notice-line">
+      <div class="bg-left"></div>
+      <div class="bg-right"></div>
+      <div class="inner">
+
+        <div class="inner__left">
+          <h2>공지사항</h2>
+          <div class="swiper-container">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <a href="javascript:void(0)">크리스마스 & 연말연시 스타벅스 매장 영업시간 변경 안내</a>
+              </div>
+              <div class="swiper-slide">
+                <a href="javascript:void(0)">[당첨자 발표] 2021 스타벅스 플래너 영수증 이벤트</a>
+              </div>
+              <div class="swiper-slide">
+                <a href="javascript:void(0)">스타벅스커피 코리아 애플리케이션 버전 업데이트 안내</a>
+              </div>
+              <div class="swiper-slide">
+                <a href="javascript:void(0)">[당첨자 발표] 뉴이어 전자영수증 이벤트</a>
+              </div>
+            </div>
+          </div>
+          <a href="javascript:void(0)" class="notice-line__more">
+            <span class="material-icons">add_circle</span>
+          </a>
+        </div>
+
+        <div class="inner__right">
+          <h2>스타벅스 프로모션</h2>
+          <div class="toggle-promotion open">
+            <div class="material-icons">upload</div>
+          </div>
+        </div>
+
+      </div>
     </div>
-  </section>
+
   
 </body>
 </html>
